Deprecate server data usage timeframe API (#537)
