# src/shadowbox/model/access_key.ts
@@ -12,8 +12,6 @@
 // See the License for the specific language governing permissions and
 // limitations under the License.
 
-import {DataUsageTimeframe} from '../model/metrics';
-
 export type AccessKeyId = string;
 export type AccessKeyMetricsId = string;
 
@@ -44,7 +42,7 @@ export interface AccessKey {
   readonly proxyParams: ProxyParams;
   // Admin-controlled, data transfer limit for this access key. Unlimited if unset.
   readonly dataLimit?: DataUsage;
-  // Data transferred by this access key over a timeframe specified by the server.
+  // Data transferred by this access key over a 30 day sliding timeframe.
   readonly dataUsage: DataUsage;
   // Returns whether the access key has exceeded its data transfer limit.
   isOverDataLimit(): boolean;
@@ -67,6 +65,4 @@ export interface AccessKeyRepository {
   setAccessKeyDataLimit(id: AccessKeyId, limit: DataUsage): Promise<void>;
   // Clears the transfer limit for the specified access key. Throws on failure.
   removeAccessKeyDataLimit(id: AccessKeyId): Promise<void>;
-  // Sets the data usage timeframe for access key data limit enforcement. Throws on failure.
-  setDataUsageTimeframe(timeframe: DataUsageTimeframe): Promise<void>;
 }
