# src/shadowbox/server/manager_service.ts
@@ -79,8 +79,6 @@ export function bindService(
   apiServer.put(
       `${apiPrefix}/server/port-for-new-access-keys`,
       service.setPortForNewAccessKeys.bind(service));
-  apiServer.put(
-      `${apiPrefix}/server/data-usage-timeframe`, service.setDataUsageTimeframe.bind(service));
 
   apiServer.post(`${apiPrefix}/access-keys`, service.createNewAccessKey.bind(service));
   apiServer.get(`${apiPrefix}/access-keys`, service.listAccessKeys.bind(service));
@@ -140,8 +138,6 @@ export class ShadowsocksManagerService {
       serverId: this.serverConfig.data().serverId,
       metricsEnabled: this.serverConfig.data().metricsEnabled || false,
       createdTimestampMs: this.serverConfig.data().createdTimestampMs,
-      portForNewAccessKeys: this.serverConfig.data().portForNewAccessKeys,
-      dataUsageTimeframe: this.serverConfig.data().dataUsageTimeframe,
       version
     });
     next();
@@ -295,40 +291,11 @@ export class ShadowsocksManagerService {
     }
   }
 
-  public setDataUsageTimeframe(req: RequestType, res: ResponseType, next: restify.Next) {
-    try {
-      logging.debug(`setDataUsageTimeframe request ${JSON.stringify(req.params)}`);
-      const hours = req.params.hours;
-      if (!hours) {
-        return next(
-            new restify.MissingParameterError({statusCode: 400}, 'Parameter `hours` is missing'));
-      }
-      if (typeof hours !== 'number' ||
-          !Number.isInteger(hours)) {  // The access key repository will validate the value.
-        return next(new restify.InvalidArgumentError(
-            {statusCode: 400}, 'Parameter `hours` must be an integer'));
-      }
-      const dataUsageTimeframe = {hours};
-      this.accessKeys.setDataUsageTimeframe(dataUsageTimeframe);
-      this.serverConfig.data().dataUsageTimeframe = dataUsageTimeframe;
-      this.serverConfig.write();
-      res.send(HttpSuccess.NO_CONTENT);
-      return next();
-    } catch (error) {
-      logging.error(error);
-      if (error instanceof errors.InvalidDataUsageTimeframe) {
-        return next(new restify.InvalidArgumentError({statusCode: 400}, error.message));
-      }
-      return next(new restify.InternalServerError());
-    }
-  }
-
   public async getDataUsage(req: RequestType, res: ResponseType, next: restify.Next) {
     // TODO(alalama): use AccessKey.dataUsage to avoid querying Prometheus. Deprecate this call in
     // the manager in favor of `GET /access-keys`.
     try {
-      const timeframe = this.serverConfig.data().dataUsageTimeframe;
-      res.send(HttpSuccess.OK, await this.managerMetrics.getOutboundByteTransfer(timeframe));
+      res.send(HttpSuccess.OK, await this.managerMetrics.getOutboundByteTransfer({hours: 30 * 24}));
       return next();
     } catch (error) {
       logging.error(error);
